AP-8584: Use new MultiFilesHistoryPanel
AP-8584 (Simplify adding attachments in Send Mail node via flow variables)